--- a/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
+++ b/FrontEnd/src/app/student-exam/eye-track/eye-track.component.html
@@ -1,25 +1,3 @@
 <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
-<script src="../../../assets/js/index.js" defer>
+<script src="../../../assets/js/index.js" defer></script>
 
-</script>
-
-<!-- <h1 align="center">camera Recording</h1>
-
-<div style="text-align: center;">
-
-    <button id="start" class="start" (click)="recordStart()" [disabled]="isRecording">
-      Start Recording
-    </button>
-
-
-    <button id="stop" class="stop" (click)="recordStop()" [disabled]="!isRecording">
-      Stop Recording
-    </button>
-
-    <button id="stop" (click)="downloadBlob()" *ngIf="hasVideo">
-      Download Recording
-    </button>
-
-    <video *ngIf="hasVideo" #recordVideo width="500" controls></video>
-
-  </div> -->
