chat box design and notification filtered

--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
@@ -3,19 +3,148 @@
     <div class="row">
       <div class="col-7">
         <div class="row">
-          Profile
+          Name: {{studentDetails.fullName}} <br>
+          Email: {{studentDetails.email}} <br>
+          Institute: {{studentDetails.institute}} <br>
+          Batch: {{studentDetails.batch}} <br>
+          Roll: {{studentDetails.roll}} <br>
+          Phone No: {{studentDetails.phone_number}}
         </div>
+        <hr>
         <div class="row">
           Analysis
         </div>
-        <div class="row">
+        <div>
           Chat
+          <button printSectionId="makePDF" ngxPrint type="button" class="btn btn-secondary mb-2">Notification </button>
         </div>
+
+        <div class="row chatbox">
+          <h5>CHAT BOX</h5>
+          <div class="row1">
+            <div class="row">
+              <div class="col-9">
+                <button class="btn btn-outline-secondary text-left">Hi how are you</button>
+              </div>
+              <div class="col-3"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-3"></div>
+              <div class="col-9 leftSide">
+                <button class="btn btn-outline-dark text-left"> Fine and ypuFine and ypuFine and ypuFine and ypuFine and ypu</button>
+              </div>
+            </div>
+          </div>
+          <div class="row2 row">
+            <div class="col-10">
+              <input type="text" placeholder="Type here">
+            </div>
+            <div class="col-2">
+              <div class="row">
+               <button class="btn btn-outline-success"><b>Send</b></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <div class="col-5">
-        Notification
+      <div class="col-5" id="makePDF">
+        <h2>Notification&nbsp;&nbsp;<i class="fas fa-bell"></i></h2>
+        <hr class="cl-head">
+        <br>
+        <ul *ngFor="let notification of notificationList | async">
+          <li type="none" *ngIf="notification.email == studentDetails.email">
+            <div class="row">
+              <div class="col-3">
+                <div class="row">
+                  <button class="btn btn-outline-dark" disabled>{{getExamDate(notification.time)}} {{getExamMonth(notification.time)}} </button>
+                </div>
+                <div class="row mt-1">
+                  <span class="badge bg-dark">{{getExamTime(notification.time)}}</span>
+                </div>
+                &nbsp;&nbsp;
+              </div>
+              <div class="col-9">
+                <!-- info notification -->
+                <div *ngIf="getNotificationType(notification.message) == 'info'" class="alert alert-primary d-flex align-items-center" role="alert">
+                  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href="#info-fill"/></svg>
+                  <div>
+                    {{notification.message}}
+                  </div>
+                </div>
+                <!-- success notification -->
+                <div *ngIf="getNotificationType(notification.message) == 'success'" class="alert alert-success d-flex align-items-center" role="alert">
+                  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+                  <div>
+                    {{notification.message}}
+                  </div>
+                </div>
+                <!-- warning notification -->
+                <div  *ngIf="getNotificationType(notification.message) == 'warning'" class="alert alert-warning d-flex align-items-center" role="alert">
+                  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                  <div>
+                    {{notification.message}}
+                  </div>
+                </div>
+                <!-- danger notification -->
+                <div *ngIf="getNotificationType(notification.message) == 'danger'" class="alert alert-danger d-flex align-items-center" role="alert">
+                  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                  <div>
+                    {{notification.message}}
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <div *ngIf="notification.screenRecord != '' || notification.cameraRecord != ''"> Evidence:</div> <a href="{{notification.screenRecord}}" *ngIf="notification.screenRecord != ''" target="_blank">Screen Record</a> &nbsp;&nbsp;
+            <a href="{{notification.cameraRecord}}" *ngIf="notification.cameraRecord != ''" target="_blank">Camera Footage</a> -->
+          </li>
+        </ul>
       </div>
     </div>
   </div>
 </div>
 
+
+<!-- <div class="chat">
+  <div class="chatbox">
+    <div class="col1">
+      <div class="msg-row">
+        <div class="msg-text">
+          <h2>Inzamam</h2>
+          <p>I am here</p>
+        </div>
+        <img class='msg-img' src="./../../assets/image/teacher.jpg">
+      </div>
+      <div class="msg-row msg-row2">
+        <img class='msg-img' src="./../../assets/image/examinee.jpg">
+        <div class="msg-text">
+          <h2>Sobuz</h2>
+          <p>Plz help me bro</p>
+        </div>
+      </div>
+      <div class="msg-row">
+        <div class="msg-text">
+          <h2>Inzamam</h2>
+          <p>I can't</p>
+        </div>
+        <img class='msg-img' src="./../../assets/image/teacher.jpg">
+      </div>
+      <input type="text" placeholder="Type here">
+    </div>
+    <div class="col2"></div>
+  </div>
+</div> -->
+
+<!-- https://getbootstrap.com/docs/5.0/components/alerts/ -->
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+  <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+  </symbol>
+  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+</svg>
