--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.css
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.css
@@ -3,3 +3,120 @@
   min-height:100vh;
   padding-top: 88px;
 }
+
+.cl-head {
+  color: black;
+  height:4px;
+}
+
+.chatbox {
+  border: #38393a solid 1px;
+  padding: 20px 10px 20px 10px;
+}
+
+.leftSide {
+  padding-right: 24px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.row2 input {
+  border: 0;
+  outline: none;
+  margin-top: 20px;
+  padding: 10px 40px;
+  background: #38393a;
+  color: #fff;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 5px;
+}
+
+.row2 button {
+  margin-top: 20px;
+  padding: 10px 40px;
+  width: 100%;
+}
+
+/*chat box
+.chat {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right, #1c00f2, #453f96);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+.chatbox {
+  background-color: #1d61c2;
+  width: 60%;
+  min-width: 250px;
+  display: flex;
+}
+
+.col1 {
+  flex: 1;
+}
+
+.col2 {
+  flex-basis: 250px;
+  background: #3874c9;
+}
+
+.msg-row {
+  display: flex;
+  align-items: center;
+  margin: 40px;
+}
+
+.msg-text {
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px 40px;
+  border-radius: 8px;
+  flex-basis: 70%;
+  font-weight: 300;
+}
+
+.msg-text h2{
+  font-weight: 400;
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.msg-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  margin: 0 20px;
+}
+
+.msg-row2 {
+  justify-content: flex-end;
+}
+
+.col1 input {
+  border: 0;
+  outline: none;
+  padding: 20px 40px;
+  background: #3874c9;
+  color: #fff;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+::placeholder {
+  color: #fff;
+}
+*/
