--- a/FrontEnd/src/app/student-exam/student-exam.component.css
+++ b/FrontEnd/src/app/student-exam/student-exam.component.css
@@ -55,3 +55,51 @@
   min-height:100vh;
   padding-top: 88px;
 }
+
+
+.row1 {
+  background-color: #EFEAD8;
+  border-radius: 5px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow-y: scroll;
+}
+
+.chatbox {
+  border-radius: 5px;
+  background-color: #d3caaa;
+  padding: 20px 10px 20px 20px;
+}
+
+.leftSide {
+  padding-right: 12px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.text-left {
+  text-align: left !important;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.row2 input {
+  border: 0;
+  outline: none;
+  margin-top: 20px;
+  padding: 10px 40px;
+  background: #38393a;
+  color: #fff;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 5px;
+}
+
+.row2 button {
+  margin-top: 20px;
+  padding: 10px;
+  width: 100%;
+}
