--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -33,6 +33,7 @@
           </div>
         </div>
         <br><br>
+
         <div class="manual">
           <h4>GUIDELINES</h4>
           <hr class="cl-head">
@@ -44,9 +45,44 @@
           <input type="checkbox" checked> You can't outsight screen for more than {{examDetails.outSightTime}} seconds. <br>
           <input type="checkbox" checked> Your camera footage will be sent to teacher as soon as you are detected to be suspicious.
         </div>
+        <br><br>
+
+        <div class="row chatbox mt-5">
+          <h5>CHAT BOX</h5>
+          <div class="row1">
+            <div class="start mt-3" style="display: flex; justify-content: center;">
+              <span class="badge bg-primary">Do you have any query? Ask here...</span>
+            </div>
+            <div class="row mt-3">
+              <div class="col-9">
+                <button class="btn btn-outline-secondary text-left">Hi how are you</button>
+              </div>
+              <div class="col-3"></div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col-3"></div>
+              <div class="col-9 leftSide">
+                <button class="btn btn-outline-dark text-left"> Fine and ypuFine and ypuFine and ypuFine and ypuFine and ypu</button>
+              </div>
+            </div>
+          </div>
+          <div class="row2 row">
+            <div class="col-10">
+              <input type="text" placeholder="Type here">
+            </div>
+            <div class="col-2">
+              <div class="row">
+               <button class="btn btn-outline-success"><b>Send</b></button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="col-6">
         <button class="btn btn-warning" (click)="endExam()">Leave Exam</button>
+        <br>
         <object [data]="examDetails.question | safe" type="application/pdf" width="1000" height="800"> </object>
       </div>
       <div class="col-1">
