--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.css
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.css
@@ -9,13 +9,22 @@
   height:4px;
 }
 
+.row1 {
+  background-color: #D4ECDD;
+  border-radius: 5px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow-y: scroll;
+}
+
 .chatbox {
-  border: #38393a solid 1px;
-  padding: 20px 10px 20px 10px;
+  border-radius: 5px;
+  background-color: #9fc7ae;
+  padding: 20px 10px 20px 20px;
 }
 
 .leftSide {
-  padding-right: 24px;
+  padding-right: 12px;
   display: flex;
   justify-content: flex-end;
 }
@@ -43,7 +52,7 @@
 
 .row2 button {
   margin-top: 20px;
-  padding: 10px 40px;
+  padding: 10px;
   width: 100%;
 }
 
