--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
@@ -3,33 +3,52 @@
     <div class="row">
       <div class="col-7">
         <div class="row">
-          Name: {{studentDetails.fullName}} <br>
-          Email: {{studentDetails.email}} <br>
-          Institute: {{studentDetails.institute}} <br>
-          Batch: {{studentDetails.batch}} <br>
-          Roll: {{studentDetails.roll}} <br>
-          Phone No: {{studentDetails.phone_number}}
+          <div class="col-8">
+            <b>Name:</b>
+            {{studentDetails.fullName}} <br>
+
+            <b>Email:</b>
+            {{studentDetails.email}} <br>
+
+            <b>Institute:</b>
+            {{studentDetails.institute}} <br>
+          </div>
+
+          <div class="col-4">
+            <b>Batch:</b>
+            {{studentDetails.batch}} <br>
+
+            <b>Roll:</b>
+            {{studentDetails.roll}} <br>
+
+            <b>Phone No:</b>
+            {{studentDetails.phone_number}} <br>
+          </div>
         </div>
         <hr>
-        <div class="row">
-          Analysis
-        </div>
+
         <div>
-          Chat
-          <button printSectionId="makePDF" ngxPrint type="button" class="btn btn-secondary mb-2">Notification </button>
+          <button class="btn btn-outline-danger mt-2" (click)="notificationFilter()">
+            <div *ngIf="onlySuspected">All Notification</div>
+            <div *ngIf="!onlySuspected">Only Suspected Notification</div>
+          </button> &nbsp;
+          <button printSectionId="makePDF" ngxPrint type="button" class="btn btn-outline-primary mt-2">Report Download </button>
         </div>
 
-        <div class="row chatbox">
+        <div class="row chatbox mt-5">
           <h5>CHAT BOX</h5>
           <div class="row1">
-            <div class="row">
+            <div class="start mt-3" style="display: flex; justify-content: center;">
+              <span class="badge bg-primary">Do you have any query? Ask here...</span>
+            </div>
+            <div class="row mt-3">
               <div class="col-9">
                 <button class="btn btn-outline-secondary text-left">Hi how are you</button>
               </div>
               <div class="col-3"></div>
             </div>
 
-            <div class="row">
+            <div class="row mt-3">
               <div class="col-3"></div>
               <div class="col-9 leftSide">
                 <button class="btn btn-outline-dark text-left"> Fine and ypuFine and ypuFine and ypuFine and ypuFine and ypu</button>
@@ -54,7 +73,7 @@
         <hr class="cl-head">
         <br>
         <ul *ngFor="let notification of notificationList | async">
-          <li type="none" *ngIf="notification.email == studentDetails.email">
+          <li type="none" *ngIf="notification.email == studentDetails.email && (!onlySuspected || getNotificationType(notification.message) == 'danger')">
             <div class="row">
               <div class="col-3">
                 <div class="row">
