Exam analysis - Gantt chart done

--- a/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
+++ b/FrontEnd/src/app/student-under-exam/student-under-exam.component.html
@@ -124,37 +124,6 @@
   </div>
 </div>
 
-
-<!-- <div class="chat">
-  <div class="chatbox">
-    <div class="col1">
-      <div class="msg-row">
-        <div class="msg-text">
-          <h2>Inzamam</h2>
-          <p>I am here</p>
-        </div>
-        <img class='msg-img' src="./../../assets/image/teacher.jpg">
-      </div>
-      <div class="msg-row msg-row2">
-        <img class='msg-img' src="./../../assets/image/examinee.jpg">
-        <div class="msg-text">
-          <h2>Sobuz</h2>
-          <p>Plz help me bro</p>
-        </div>
-      </div>
-      <div class="msg-row">
-        <div class="msg-text">
-          <h2>Inzamam</h2>
-          <p>I can't</p>
-        </div>
-        <img class='msg-img' src="./../../assets/image/teacher.jpg">
-      </div>
-      <input type="text" placeholder="Type here">
-    </div>
-    <div class="col2"></div>
-  </div>
-</div> -->
-
 <!-- https://getbootstrap.com/docs/5.0/components/alerts/ -->
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
@@ -169,4 +138,5 @@
 </svg>
 
 
-<div id="divPieChart"></div>
+<div id="divPieChart" style="width: 900px; height: 500px;"></div>
+<div id="divGanttChart"></div>
