--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -52,8 +52,9 @@
             </div>
           </div>
         </div>
-        <br> <br>
-        <object [data]="examDetails.question | safe" type="application/pdf" width="800" height="600"> </object>
+        <div class="row mt-5">
+          <object [data]="examDetails.question | safe" type="application/pdf" height="700"> </object>
+        </div>
       </div>
       <div class="col-4" id="makePDF">
         <h2>Notification&nbsp;&nbsp;<i class="fas fa-bell"></i></h2>
