--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -1,5 +1,5 @@
 <div class="exam">
-  <br><br><br><br><br>
+  <br><br><br>
   <div class="calibrationDiv" *ngIf="!calibrationDone && stepDone >= 5">
 
     <input type="button" (click)="calibrationClick(0)" class="calibration" id="pt1" style="background-color: red; opacity: 0.2">
@@ -82,8 +82,9 @@
 
       <div class="col-6">
         <button class="btn btn-warning" (click)="endExam()">Leave Exam</button>
-        <br>
-        <object [data]="examDetails.question | safe" type="application/pdf" width="1000" height="800"> </object>
+        <div class="row mt-5">
+          <object [data]="examDetails.question | safe" type="application/pdf" height="700"> </object>
+        </div>
       </div>
       <div class="col-1">
       </div>
