--- a/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
+++ b/FrontEnd/src/app/details-teacher-exam-card/details-teacher-exam-card.component.html
@@ -55,6 +55,48 @@
         <div class="row mt-5">
           <object [data]="examDetails.question | safe" type="application/pdf" height="700"> </object>
         </div>
+        <div class="row chatbox mt-5">
+          <h5>CHAT BOX</h5>
+          <div class="row1">
+            <div class="start mt-3" style="display: flex; justify-content: center;">
+              <span class="badge bg-primary">Do you have any query? Ask here...</span>
+            </div>
+            <!-- <div class="row mt-3">
+              <div class="col-9">
+                <button class="btn btn-outline-secondary text-left">Hi how are you</button>
+              </div>
+              <div class="col-3"></div>
+            </div>
+
+            <div class="row mt-3">
+              <div class="col-3"></div>
+              <div class="col-9 leftSide">
+                <button class="btn btn-outline-dark text-left"> Fine and ypuFine and ypuFine and ypuFine and ypuFine and ypu</button>
+              </div>
+            </div> -->
+            <div class="chatbox__messages" *ngFor="let msg of messageList; let i = index" [ngClass]="{mine: messageList[i].mine}">
+              <div class="user-message">
+                <div class="message-box">
+                  <p class="name">{{ msg.userName }}</p>
+                  <br/>
+                  <p class="message">{{ msg.message }}</p>
+                </div>
+              </div>
+            </div>
+          
+          </div>
+          <div class="row2 row">
+            <div class="col-10">
+              <input type="text" [(ngModel)]="msgDummy.msg" placeholder="Type here" [ngModelOptions]="{standalone: true}">
+            </div>
+            <div class="col-2">
+              <div class="row">
+               <button class="btn btn-outline-success" (click)="sendMessage()"><b>Send</b></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
       <div class="col-4" id="makePDF">
         <h2>Notification&nbsp;&nbsp;<i class="fas fa-bell"></i></h2>
