--- a/FrontEnd/src/app/student-exam/student-exam.component.html
+++ b/FrontEnd/src/app/student-exam/student-exam.component.html
@@ -34,6 +34,14 @@
         </div>
         <br><br>
 
+        <div class="col-6">
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label" ><h6>Answer:</h6></label>
+            <input type="file" class="form-control" id="recipient-duration" placeholder="120" (change)="uploadFile($event)" >
+        </div>
+          <button class="btn btn-success" (click)="submitAnswer()">Submit Answer</button>
+        </div>
+
         <div class="manual">
           <h4>GUIDELINES</h4>
           <hr class="cl-head">
@@ -53,7 +61,7 @@
             <div class="start mt-3" style="display: flex; justify-content: center;">
               <span class="badge bg-primary">Do you have any query? Ask here...</span>
             </div>
-            <div class="row mt-3">
+            <!-- <div class="row mt-3">
               <div class="col-9">
                 <button class="btn btn-outline-secondary text-left">Hi how are you</button>
               </div>
@@ -65,15 +73,25 @@
               <div class="col-9 leftSide">
                 <button class="btn btn-outline-dark text-left"> Fine and ypuFine and ypuFine and ypuFine and ypuFine and ypu</button>
               </div>
+            </div> -->
+            <div class="chatbox__messages" *ngFor="let msg of messageList; let i = index" [ngClass]="{mine: messageList[i].mine}">
+              <div class="user-message">
+                <div class="message-box">
+                  <p class="name">{{ msg.userName }}</p>
+                  <br/>
+                  <p class="message">{{ msg.message }}</p>
+                </div>
+              </div>
             </div>
+          
           </div>
           <div class="row2 row">
             <div class="col-10">
-              <input type="text" placeholder="Type here">
+              <input type="text" [(ngModel)]="msgDummy.msg" placeholder="Type here">
             </div>
             <div class="col-2">
               <div class="row">
-               <button class="btn btn-outline-success"><b>Send</b></button>
+               <button class="btn btn-outline-success" (click)="sendMessage()"><b>Send</b></button>
               </div>
             </div>
           </div>
